Добавил type=module для поддержки import

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     />
     <title>Fast Move</title>
     <script
+      type="module"
       src="script.js"
       defer
     ></script>
@@ -359,6 +360,5 @@
         </section>
       </div>
     </main>
-
   </body>
 </html>
