--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="./styles/style.scss"
+    />
   </head>
   <body class="page__body">
     <header class="header">
