updated number and made some minor changes

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,26 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+
     <link
       rel="stylesheet"
       href="./styles/style.scss"
     />
+
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-DWGEDCZK28"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-DWGEDCZK28');
+    </script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -55,13 +71,13 @@
 
             <div class="header__icons">
               <a
-                href="tel:+1 234 5555-55-55"
+                href="tel:+380685865226"
                 class="icon icon--phone"
               >
-                <div class="icon__tooltip">+380931111111</div>
+                <div class="icon__tooltip">+380685865226</div>
               </a>
               <a
-                href="https://t.me/telegram"
+                href="https://t.me/fast_move_od_ua_bot"
                 class="icon icon--telegram"
                 target="_blank"
               ></a>
@@ -134,8 +150,9 @@
             <div class="delivery__wrapper section__wrapper">
               <h2 class="section__title">Вантажні перевезення</h2>
               <p class="section__description">
-                Обирайте вантажне авто під ваші потреби — від компактного буса до великого фургона.
-                Прозорі тарифи, зручне бронювання та надійна подача авто у зазначений час.
+                Обирайте вантажне авто під ваші потреби — від компактного буса до великого
+                фургона. Прозорі тарифи, зручне бронювання та надійна подача авто у зазначений
+                час.
               </p>
               <div class="delivery__cards-container">
                 <div class="delivery-card">
@@ -241,9 +258,10 @@
               >
                 <h2 class="section__title">Вивіз сміття</h2>
                 <p class="section__description">
-                  Пропонуємо швидкий та зручний вивіз будівельного і побутового сміття. Прибираємо
-                  після ремонту, будівництва, демонтажу або генерального прибирання. Виїжджаємо на
-                  об'єкти будь-якої складності — квартири, офіси, ділянки, горища та підвали.
+                  Пропонуємо швидкий та зручний вивіз будівельного і побутового сміття.
+                  Прибираємо після ремонту, будівництва, демонтажу або генерального прибирання.
+                  Виїжджаємо на об'єкти будь-якої складності — квартири, офіси, ділянки, горища
+                  та підвали.
                 </p>
               </article>
 
@@ -255,8 +273,8 @@
                 <p class="section__description">
                   Виконуємо повний спектр демонтажних робіт: перегородки, старі покриття,
                   сантехніка, плитка, меблі та інше. Дбайливо ставимося до суміжних поверхонь і
-                  комунікацій, дотримуємось техніки безпеки. Після завершення — залишаємо приміщення
-                  в чистому стані.
+                  комунікацій, дотримуємось техніки безпеки. Після завершення — залишаємо
+                  приміщення в чистому стані.
                 </p>
               </article>
 
@@ -267,16 +285,16 @@
                 <h2 class="section__title">Вантажники</h2>
                 <p class="section__description">
                   Наша команда вантажників — це досвідчені спеціалісти, які акуратно працюють з
-                  будь-якими речами: меблями, побутовою технікою, будматеріалами та іншим майном. Ми
-                  гарантуємо обережне поводження, оперативність і відповідальність на кожному етапі
-                  вантажних робіт.
+                  будь-якими речами: меблями, побутовою технікою, будматеріалами та іншим
+                  майном. Ми гарантуємо обережне поводження, оперативність і відповідальність
+                  на кожному етапі вантажних робіт.
                 </p>
               </article>
             </div>
 
             <a
               class="services-group__button button button--order button--order-all"
-              href="https://t.me/telegram"
+              href="tel:+3800685865226"
               target="_blank"
             >
               Замовити послугу
@@ -308,8 +326,7 @@
                   <input
                     type="email"
                     class="contacts__field form-field"
-                    placeholder="Імейл"
-                    required
+                    placeholder="Електронна пошта"
                     autocomplete="on"
                     name="email"
                   />
@@ -332,11 +349,11 @@
                 <p class="contacts__info-title">Телефон</p>
                 <a
                   class="contacts__info-link"
-                  href="tel:+380933333333"
+                  href="tel:+3800685865226"
                 >
-                  +38093 333 33 33
+                  +380685865226
                 </a>
-                <p class="contacts__info-title">Імейл</p>
+                <p class="contacts__info-title">Електронна пошта</p>
                 <a
                   class="contacts__info-link"
                   href="mailto:shvidkiy@pereiizd.com"
