remove a dot from contacts

--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
                 >
                   м.Одеса
                   <br />
-                  Працюємо по всьому місту та за містом.
+                  Працюємо по всьому місту та за містом
                 </a>
               </div>
             </div>
